--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@ https://www.iconfinder.com/korawan_m
           </div>
           <!-- end of single info -->
           <!-- single info -->
+          <!-- commenting out the hardcoded part -->
           <div id="cart-info" class="nav-info align-items-center cart-info d-flex justify-content-between mx-lg-5">
             <span class="cart-info__icon mr-lg-3"><i class="fas fa-shopping-cart"></i></span>
-            <p class="mb-0 text-capitalize"><span id="item-count">2 </span> items - $<span class="item-total">10.49</span></p>
+            <!-- <p class="mb-0 text-capitalize"><span id="item-count">2 </span> items - $<span class="item-total">10.49</span></p> -->
           </div>
           <!-- end of single info -->
         </div>
@@ -70,7 +71,8 @@ https://www.iconfinder.com/korawan_m
         </div>
         <div id="cart" class="cart">
           <!-- cart item -->
-          <div class="cart-item d-flex justify-content-between text-capitalize my-3">
+          <!-- commenting out hardcoded items -->
+          <!-- <div class="cart-item d-flex justify-content-between text-capitalize my-3">
             <img src="img-cart/cake-2.jpeg" class="img-fluid rounded-circle" id="item-img" alt="">
             <div class="item-text">
 
@@ -81,10 +83,11 @@ https://www.iconfinder.com/korawan_m
             <a href="#" id='cart-item-remove' class="cart-item-remove">
               <i class="fas fa-trash"></i>
             </a>
-          </div>
+          </div> -->
           <!--end of  cart item -->
           <!-- cart item -->
-          <div class="cart-item d-flex justify-content-between text-capitalize my-3">
+
+          <!-- <div class="cart-item d-flex justify-content-between text-capitalize my-3">
             <img src="img-cart/doughnut-2.jpeg" class="img-fluid rounded-circle" id="item-img" alt="">
             <div class="cart-item-text">
 
@@ -95,7 +98,7 @@ https://www.iconfinder.com/korawan_m
             <a href="#" id='cart-item-remove' class="cart-item-remove">
               <i class="fas fa-trash"></i>
             </a>
-          </div>
+          </div> -->
           <!--end of  cart item -->
           <!-- cart total -->
           <div class="cart-total-container d-flex justify-content-around text-capitalize mt-5">
