--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ https://www.iconfinder.com/korawan_m
             <a class="nav-link " href="#">about</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">store</a>
+            <a class="nav-link" href="#store">store</a>
           </li>
         </ul>
         <div class="nav-info-items d-none d-lg-flex ">
