--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ https://www.iconfinder.com/korawan_m
           <!-- commenting out the hardcoded part -->
           <div id="cart-info" class="nav-info align-items-center cart-info d-flex justify-content-between mx-lg-5">
             <span class="cart-info__icon mr-lg-3"><i class="fas fa-shopping-cart"></i></span>
-            <!-- <p class="mb-0 text-capitalize"><span id="item-count">2 </span> items - $<span class="item-total">10.49</span></p> -->
+            <p class="mb-0 text-capitalize"><span id="item-count">0 </span> items - $<span class="item-total">00.00</span></p>
           </div>
           <!-- end of single info -->
         </div>
@@ -103,7 +103,7 @@ https://www.iconfinder.com/korawan_m
           <!-- cart total -->
           <div class="cart-total-container d-flex justify-content-around text-capitalize mt-5">
             <h5>total</h5>
-            <h5> $ <strong id="cart-total" class="font-weight-bold">10.00</strong> </h5>
+            <h5> $ <strong id="cart-total" class="font-weight-bold">0.00</strong> </h5>
           </div>
           <!--end cart total -->
           <!-- cart buttons -->
